# penguin

./: .gitignore  CMakeLists.txt  main.cpp  penguin
src/: err_handle.h  file_io.h  universal_io.h  utiles.h
src/process_communication/mmp/: mmp_anonymouse.h  mmp_file.h
src/process_communication/pipi_fifo/: fifo.h  pipe.h
src/process_communication/posix_ipc/: message_queue.h  sem.h  share_memory.h
src/process_communication/socket/: tcp.h  unix_socket.h
